--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/maciek01/uavserver#readme",
   "dependencies": {
+    "cuid": "^1.3.8",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
     "fs-extra": "^2.1.2",
