--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cuid": "^1.3.8",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
+    "fifo": "^2.3.0",
     "fs-extra": "^2.1.2",
     "method-override": "^2.3.10",
     "morgan": "^1.9.0",
